cabal-version:      2.4
name:               smol-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , aeson
    , base
    , builder
    , bytestring
    , containers
    , cryptonite
    , diagnose
    , file-embed
    , megaparsec
    , memory
    , mtl
    , nonempty-containers
    , parser-combinators
    , prettyprinter
    , text
    , writer-cps-mtl

library
  import:           shared

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Smol.Core
    Smol.Core.ExprUtils
    Smol.Core.Helpers
    Smol.Core.Interpreter
    Smol.Core.Interpreter.Convert
    Smol.Core.Interpreter.Interpret
    Smol.Core.Interpreter.Types
    Smol.Core.Modules.Check
    Smol.Core.Modules.Dependencies
    Smol.Core.Modules.Types.DepType
    Smol.Core.Modules.FromParts
    Smol.Core.Modules.HashModule
    Smol.Core.Modules.ModuleError
    Smol.Core.Modules.Monad
    Smol.Core.Modules.ResolveDeps
    Smol.Core.Modules.Typecheck
    Smol.Core.Modules.Uses
    Smol.Core.Parser
    Smol.Core.Parser.DataType
    Smol.Core.Parser.Expr
    Smol.Core.Parser.Identifiers
    Smol.Core.Parser.Module
    Smol.Core.Parser.Pattern
    Smol.Core.Parser.Primitives
    Smol.Core.Parser.Shared
    Smol.Core.Parser.Type
    Smol.Core.Printer
    Smol.Core.SourceSpan
    Smol.Core.Typecheck
    Smol.Core.Typecheck.Elaborate
    Smol.Core.Typecheck.Errors
    Smol.Core.Typecheck.Exhaustiveness
    Smol.Core.Typecheck.FreeVars
    Smol.Core.Typecheck.FromParsedExpr
    Smol.Core.Typecheck.Pattern
    Smol.Core.Typecheck.Shared
    Smol.Core.Typecheck.Substitute
    Smol.Core.Typecheck.Subtype
    Smol.Core.Typecheck.Types
    Smol.Core.Types
    Smol.Core.Types.Annotated
    Smol.Core.Types.Annotation
    Smol.Core.Types.Constructor
    Smol.Core.Types.DataType
    Smol.Core.Types.Expr
    Smol.Core.Types.GetPath
    Smol.Core.Types.Identifier
    Smol.Core.Types.Module
    Smol.Core.Types.Module.DefIdentifier
    Smol.Core.Types.Module.Entity
    Smol.Core.Types.Module.Module
    Smol.Core.Types.Module.ModuleHash
    Smol.Core.Types.Module.ModuleName
    Smol.Core.Types.ParseDep
    Smol.Core.Types.Pattern
    Smol.Core.Types.PatternMatchError
    Smol.Core.Types.PatternPredicate
    Smol.Core.Types.Prim
    Smol.Core.Types.ResolvedDep
    Smol.Core.Types.SourceSpan
    Smol.Core.Types.Spread
    Smol.Core.Types.Type
    Smol.Core.Types.TypeName
    Smol.Core.TypeUtils

test-suite smol-core-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3

  other-modules:
    Smol.Core
    Smol.Core.ExprUtils
    Smol.Core.Helpers
    Smol.Core.Interpreter
    Smol.Core.Interpreter.Convert
    Smol.Core.Interpreter.Interpret
    Smol.Core.Interpreter.Types
    Smol.Core.Modules.Check
    Smol.Core.Modules.Dependencies
    Smol.Core.Modules.FromParts
    Smol.Core.Modules.HashModule
    Smol.Core.Modules.ModuleError
    Smol.Core.Modules.Monad
    Smol.Core.Modules.ResolveDeps
    Smol.Core.Modules.Typecheck
    Smol.Core.Modules.Types.DepType
    Smol.Core.Modules.Uses

    Smol.Core.Parser
    Smol.Core.Parser.DataType
    Smol.Core.Parser.Expr
    Smol.Core.Parser.Identifiers
    Smol.Core.Parser.Module
    Smol.Core.Parser.Pattern
    Smol.Core.Parser.Primitives
    Smol.Core.Parser.Shared
    Smol.Core.Parser.Type
    Smol.Core.Printer
    Smol.Core.SourceSpan
    Smol.Core.Typecheck
    Smol.Core.Typecheck.Elaborate
    Smol.Core.Typecheck.Errors
    Smol.Core.Typecheck.Exhaustiveness
    Smol.Core.Typecheck.FreeVars
    Smol.Core.Typecheck.FromParsedExpr
    Smol.Core.Typecheck.Pattern
    Smol.Core.Typecheck.Shared
    Smol.Core.Typecheck.Substitute
    Smol.Core.Typecheck.Subtype
    Smol.Core.Typecheck.Types
    Smol.Core.Types
    Smol.Core.Types.Annotated
    Smol.Core.Types.Annotation
    Smol.Core.Types.Constructor
    Smol.Core.Types.DataType
    Smol.Core.Types.Expr
    Smol.Core.Types.GetPath
    Smol.Core.Types.Identifier
    Smol.Core.Types.Module
    Smol.Core.Types.Module.DefIdentifier
    Smol.Core.Types.Module.Entity
    Smol.Core.Types.Module.Module
    Smol.Core.Types.Module.ModuleHash
    Smol.Core.Types.Module.ModuleName
    Smol.Core.Types.ParseDep
    Smol.Core.Types.Pattern
    Smol.Core.Types.PatternMatchError
    Smol.Core.Types.PatternPredicate
    Smol.Core.Types.Prim
    Smol.Core.Types.ResolvedDep
    Smol.Core.Types.SourceSpan
    Smol.Core.Types.Spread
    Smol.Core.Types.Type
    Smol.Core.Types.TypeName
    Smol.Core.TypeUtils
    Test.BuiltInTypes
    Test.Helpers
    Test.Interpreter.InterpreterSpec
    Test.Modules.ModulesSpec
    Test.ParserSpec
    Test.Typecheck.ExhaustivenessSpec
    Test.Typecheck.NestingMonadSpec
    Test.Typecheck.SubtypeSpec
    Test.TypecheckSpec

  main-is:          Main.hs
  default-language: Haskell2010
