cabal-version:      2.4
name:               smol-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , aeson
    , base
    , builder
    , bytestring
    , containers
    , diagnose
    , megaparsec
    , memory
    , mtl                  >=2.3.0.0
    , nonempty-containers
    , parser-combinators
    , prettyprinter
    , text
    , transformers

library
  import:           shared

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

  -- Modules included in this executable, other than Main.
  exposed-modules:
    Smol.Core
    Smol.Core.ExprUtils
    Smol.Core.Helpers
    Smol.Core.Interpreter
    Smol.Core.Interpreter.App
    Smol.Core.Interpreter.FindUses
    Smol.Core.Interpreter.If
    Smol.Core.Interpreter.Infix
    Smol.Core.Interpreter.Interpret
    Smol.Core.Interpreter.Let
    Smol.Core.Interpreter.Monad
    Smol.Core.Interpreter.PatternMatch
    Smol.Core.Interpreter.RecordAccess
    Smol.Core.Interpreter.Types
    Smol.Core.Interpreter.Types.InterpreterError
    Smol.Core.Interpreter.Types.Stack
    Smol.Core.Modules.Check
    Smol.Core.Modules.Dependencies
    Smol.Core.Modules.FromParts
    Smol.Core.Modules.Helpers
    Smol.Core.Modules.Interpret
    Smol.Core.Modules.Monad
    Smol.Core.Modules.ResolveDeps
    Smol.Core.Modules.RunTests
    Smol.Core.Modules.Typecheck
    Smol.Core.Modules.Types
    Smol.Core.Modules.Types.DefIdentifier
    Smol.Core.Modules.Types.DepType
    Smol.Core.Modules.Types.Entity
    Smol.Core.Modules.Types.Module
    Smol.Core.Modules.Types.ModuleError
    Smol.Core.Modules.Types.ModuleItem
    Smol.Core.Modules.Types.ModuleName
    Smol.Core.Modules.Types.Test
    Smol.Core.Modules.Types.TestName
    Smol.Core.Modules.Types.TopLevelExpression
    Smol.Core.Modules.Uses
    Smol.Core.Parser
    Smol.Core.Parser.DataType
    Smol.Core.Parser.Expr
    Smol.Core.Parser.Identifiers
    Smol.Core.Parser.Module
    Smol.Core.Parser.Op
    Smol.Core.Parser.Pattern
    Smol.Core.Parser.Primitives
    Smol.Core.Parser.Shared
    Smol.Core.Parser.Type
    Smol.Core.Parser.Typeclass
    Smol.Core.Printer
    Smol.Core.SourceSpan
    Smol.Core.Typecheck
    Smol.Core.Typecheck.Elaborate
    Smol.Core.Typecheck.Errors
    Smol.Core.Typecheck.Exhaustiveness
    Smol.Core.Typecheck.FreeVars
    Smol.Core.Typecheck.FromParsedExpr
    Smol.Core.Typecheck.Pattern
    Smol.Core.Typecheck.Shared
    Smol.Core.Typecheck.Simplify
    Smol.Core.Typecheck.Substitute
    Smol.Core.Typecheck.Subtype
    Smol.Core.Typecheck.Typecheck
    Smol.Core.Typecheck.Typeclass
    Smol.Core.Typecheck.Typeclass.Helpers
    Smol.Core.Typecheck.Typeclass.Types
    Smol.Core.Typecheck.Types
    Smol.Core.Typecheck.Types.Substitution
    Smol.Core.Typecheck.Types.TCError
    Smol.Core.Typecheck.Types.TCState
    Smol.Core.Typecheck.Types.TCWrite
    Smol.Core.Types
    Smol.Core.Types.Annotated
    Smol.Core.Types.Annotation
    Smol.Core.Types.Constructor
    Smol.Core.Types.DataType
    Smol.Core.Types.Expr
    Smol.Core.Types.Identifier
    Smol.Core.Types.Op
    Smol.Core.Types.ParseDep
    Smol.Core.Types.Pattern
    Smol.Core.Types.PatternMatchError
    Smol.Core.Types.Prim
    Smol.Core.Types.ResolvedDep
    Smol.Core.Types.SourceSpan
    Smol.Core.Types.Spread
    Smol.Core.Types.Type
    Smol.Core.Types.TypeName
    Smol.Core.TypeUtils

test-suite smol-core-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , file-embed
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3

  other-modules:
    Test.BuiltInTypes
    Test.Helpers
    Test.Interpreter.InterpreterSpec
    Test.Modules.FromPartsSpec
    Test.Modules.InterpreterSpec
    Test.Modules.ResolveDepsSpec
    Test.Modules.RunTestsSpec
    Test.Modules.TypecheckSpec
    Test.ParserSpec
    Test.Typecheck.ExhaustivenessSpec
    Test.Typecheck.NestingMonadSpec
    Test.Typecheck.PatternSpec
    Test.Typecheck.SubtypeSpec
    Test.Typecheck.TypeclassSpec
    Test.TypecheckSpec

  main-is:          Main.hs
  default-language: Haskell2010
