cabal-version:      2.4
name:               smol-interpreter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , base
    , containers
    , diagnose
    , mtl            >=2.3.0.0
    , prettyprinter
    , smol-core
    , text

--, builder
library
  import:           shared

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

  -- Modules included in this executable, other than Main.
  exposed-modules:
    Smol.Interpreter
    Smol.Interpreter.App
    Smol.Interpreter.If
    Smol.Interpreter.Infix
    Smol.Interpreter.Interpret
    Smol.Interpreter.Let
    Smol.Interpreter.Monad
    Smol.Interpreter.PatternMatch
    Smol.Interpreter.RecordAccess
    Smol.Interpreter.Types
    Smol.Interpreter.Types.InterpreterError
    Smol.Interpreter.Types.Stack

test-suite smol-interpreter-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , file-embed
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3
    , smol-core

  other-modules:
    Test.BuiltInTypes
    Test.Helpers
    Test.Interpreter.InterpreterSpec

  main-is:          Main.hs
  default-language: Haskell2010
