cabal-version:      2.2
name:               typechecker
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/function-boys#readme>

homepage:           https://github.com/danieljharvey/mimsa#readme
bug-reports:        https://github.com/danieljharvey/mimsa/issues
author:             Daniel J Harvey
maintainer:         danieljamesharvey@gmail.com
copyright:          2021 Daniel J Harvey
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  static/backend/es-modules-js/stdlib.mjs
  static/backend/typescript/stdlib.ts
  static/modules/Array.mimsa
  static/modules/Either.mimsa
  static/modules/Maybe.mimsa
  static/modules/Monoid.mimsa
  static/modules/NonEmptyArray.mimsa
  static/modules/Parser.mimsa
  static/modules/Prelude.mimsa
  static/modules/Reader.mimsa
  static/modules/State.mimsa
  static/modules/String.mimsa
  static/modules/These.mimsa
  static/modules/Tree.mimsa

source-repository head
  type:     git
  location: https://github.com/danieljharvey/mimsa

common common-all
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

library
  import:             common-all
  exposed-modules:
    Language.Mimsa.Typechecker
    Language.Mimsa.Typechecker.BuiltIns
    Language.Mimsa.Typechecker.CreateEnv
    Language.Mimsa.Typechecker.DataTypes
    Language.Mimsa.Typechecker.DisplayError
    Language.Mimsa.Typechecker.Elaborate
    Language.Mimsa.Typechecker.Environment
    Language.Mimsa.Typechecker.Exhaustiveness
    Language.Mimsa.Typechecker.FlattenRow
    Language.Mimsa.Typechecker.Generalise
    Language.Mimsa.Typechecker.NormaliseTypes
    Language.Mimsa.Typechecker.NumberVars
    Language.Mimsa.Typechecker.ScopeTypeVar
    Language.Mimsa.Typechecker.Solve
    Language.Mimsa.Typechecker.TcMonad
    Language.Mimsa.Typechecker.Typecheck
    Language.Mimsa.Typechecker.Unify
    Language.Mimsa.Typechecker.Error.PatternMatchError
    Language.Mimsa.Typechecker.Error.TypeError
    Language.Mimsa.Typechecker.Types.Constraint
    Language.Mimsa.Typechecker.Types.Environment
    Language.Mimsa.Typechecker.Types.FoundPath
    Language.Mimsa.Typechecker.Types.Scheme
    Language.Mimsa.Typechecker.Types.Substitutions
    Language.Mimsa.Typechecker.Types.TypeConstructor
    Language.Mimsa.Typechecker.Types.Unique
    Language.Mimsa.Typechecker.Types.UniVar

  hs-source-dirs:     src
  default-extensions: Strict
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , diagnose
    , directory
    , exceptions
    , hashable
    , megaparsec
    , mtl
    , openapi3
    , parallel
    , prettyprinter
    , servant
    , servant-server
    , text
    , transformers

  default-language:   Haskell2010

test-suite typechecker-test
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Test.Actions.BindModule
    Test.Actions.Build
    Test.Actions.Compile
    Test.Actions.Evaluate
    Test.Backend.ESModulesJS
    Test.Backend.RunNode
    Test.Backend.Typescript
    Test.Backend.Wasm
    Test.Codegen.Shared
    Test.Data.Prelude
    Test.Data.Project
    Test.Modules.Check
    Test.Modules.Repl
    Test.Modules.Test
    Test.Modules.ToStoreExprs
    Test.Modules.Uses
    Test.Project.NormaliseType
    Test.Project.SourceSpan
    Test.Project.Stdlib
    Test.RenderErrors
    Test.Serialisation
    Test.Tests.Properties
    Test.Transform.BetaReduce
    Test.Transform.EtaReduce
    Test.Transform.FindUnused
    Test.Transform.FindUses
    Test.Transform.FlattenLets
    Test.Transform.FloatDown
    Test.Transform.FloatUp
    Test.Transform.Inliner
    Test.Transform.SimplifyPatterns
    Test.Typechecker.DataTypes
    Test.Typechecker.Elaborate
    Test.Typechecker.Exhaustiveness
    Test.Typechecker.NumberVars
    Test.Typechecker.ScopeTypeVar
    Test.Typechecker.Substitutions
    Test.Typechecker.Typecheck
    Test.Typechecker.Unify
    Test.Utils.Compilation
    Test.Utils.Helpers
    Test.Utils.Serialisation

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , hspec
    , megaparsec
    , memory
    , typechecker
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , servant
    , servant-server
    , text
    , transformers
    , typed-process
    , wasm
    , zip-archive

  default-language: Haskell2010

